--- a/style.css
+++ b/style.css
@@ -42,7 +42,7 @@
     --subheadline-color: #0a989d ;
     --accent-color-1: #FCC01E ;
     --accent-color-1-darker: #0a898d  ;
-    --accent-color-2: #0a989d ;
+    --accent-color-2: #FCC01E ;
     --accent-color-2-darker: #0a898d ;
     --card-bg-color: #02385D;
     --border-color: #02385D;
